# PackVerse

./: .env.example  .gitignore  README.md  docker-compose.yml  verify.sh
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 06b17a0f30ad_create_domain_tables.py  1f20f57819a3_create_users_table.py  7c19e4b8a2d6_create_llm_requests_table.py  a1c8f7d2b3e9_create_agent_runs_table.py  ad3f998eece8_enable_pgvector_and_create_document_chunks.py  ae14cc314d2f_extend_assets_for_storage.py  b7f3e9a1c5d2_add_job_queue_fields_and_worker_heartbeats.py  cc4808800645_add_asset_ingestion_job_partial_unique_index.py  d4e6b9a3f1c7_create_workflow_run_tables.py  d657afc740be_add_tool_calls_json_to_agent_runs.py  e4ba9bdd172a_add_embedding_columns_to_document_chunks.py
backend/app/: main.py
backend/app/agents/: README.md
backend/app/api/: deps.py
backend/app/core/: config.py  logging.py  security.py
backend/app/database/: session.py
backend/app/jobs/: __init__.py  exceptions.py  models.py  queue.py  service.py
backend/app/llm/: __init__.py  base.py  exceptions.py  factory.py  gateway.py  models.py  pricing.py  routing.py
backend/tests/: conftest.py  test_assets_api.py  test_auth.py  test_authorization.py  test_chunking.py  test_config.py  test_document_chunk_models.py  test_extraction.py  test_health.py  test_ingestion_service.py  test_job_models.py  test_job_queue.py  test_job_service.py  test_llm_anthropic_adapter.py  test_llm_api.py  test_llm_fake_provider.py  test_llm_gateway.py  test_llm_openai_adapter.py  test_llm_structured_output.py  test_mcp_api.py  test_mcp_client.py  test_migrations.py  test_models.py  test_products_api.py  test_rag_retrieval.py  test_retrieval_service.py  test_runtime_api.py  test_runtime_executor.py  test_runtime_models.py  test_runtime_prompt_builder.py  test_runtime_service.py  test_runtime_tool_loop.py  test_storage_local.py  test_storage_s3.py  test_worker_dispatch.py  test_worker_healthcheck.py  test_worker_runner.py  test_workflow_definition.py  test_workflow_executor.py  test_workflow_input_builder.py  (+3 more)
(+87 files in other folders)
